# StoryRag

./: .env.example  .gitignore  LICENSE  README.md  app.py  app_services.py  build_db.py  build_desktop_exe.py  env_loader.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  config.py  logger.py
desktop_app/: dialogs.py  main.py  theme.py  widgets.py  window.py  workers.py
knowledge_base/: __init__.py  service.py
llm/: __init__.py  answering.py  client.py  prompts.py  schemas.py  validation.py
preprocessing/: __init__.py  enrichment.py  pipeline.py  schema.py  storage.py
qa/: __init__.py  context.py  decomposition.py  service.py
retrieval/: __init__.py  aliases.py  config.py  context_expansion.py  embedding.py  formatting.py  metadata.py  models.py  query.py  query_enrichment.py  ranking.py  utils.py  vectorstore.py
tests/: test_config.py  test_context_expansion.py  test_debug_settings.py  test_decomposition.py  test_package_manifest.py  test_retrieval_query.py  test_validation.py
